[gd_scene load_steps=3 format=3 uid="uid://u78fl5760vh3"]

[ext_resource type="Script" path="res://examples/qr_code/main.gd" id="1_55tdt"]
[ext_resource type="Script" path="res://addons/qr_code/qr_code_rect.gd" id="1_t1m1p"]

[node name="HBoxContainer" type="HBoxContainer" node_paths=PackedStringArray("_input_data_text", "_encoding", "_error_correction", "_use_eci", "_eci_value", "_version", "_mask_pattern", "_module_px_size", "_qr_rect")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55tdt")
_input_data_text = NodePath("MarginContainer2/VBoxContainer/InputDataText")
_encoding = NodePath("MarginContainer2/VBoxContainer/options/Encoding")
_error_correction = NodePath("MarginContainer2/VBoxContainer/options/ErrorCorrection")
_use_eci = NodePath("MarginContainer2/VBoxContainer/options/UseECI")
_eci_value = NodePath("MarginContainer2/VBoxContainer/options/ECIValue")
_version = NodePath("MarginContainer2/VBoxContainer/options/Version")
_mask_pattern = NodePath("MarginContainer2/VBoxContainer/options/MaskPattern")
_module_px_size = NodePath("MarginContainer2/VBoxContainer/options/ModulePxSize")
_qr_rect = NodePath("MarginContainer/QRCodeRect")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputDataText" type="TextEdit" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Data"

[node name="HSeparator" type="HSeparator" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="options" type="GridContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="EncodingLabel" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
text = "Encoding"

[node name="Control2" type="Control" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2

[node name="Encoding" type="OptionButton" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Numeric"
popup/item_0/id = 1
popup/item_1/text = "Alphanumeric"
popup/item_1/id = 2
popup/item_2/text = "Byte"
popup/item_2/id = 4
popup/item_3/text = "KANJI"
popup/item_3/id = 8

[node name="ErrorCorrectionLabel" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
text = "Error Correction"

[node name="Control" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2

[node name="ErrorCorrection" type="OptionButton" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Low"
popup/item_0/id = 1
popup/item_1/text = "Medium"
popup/item_1/id = 0
popup/item_2/text = "Quartile"
popup/item_2/id = 3
popup/item_3/text = "High"
popup/item_3/id = 2

[node name="ECIModeLabel" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
tooltip_text = "Using BYTE encoding will force an ECI value. Because only for the specific ECI values is text to byte conversion available.
You can always pass an byte array as data in your scripts."
mouse_filter = 0
text = "ECI Value *"

[node name="UseECI" type="CheckBox" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2

[node name="ECIValue" type="OptionButton" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
disabled = true
alignment = 1
item_count = 5
selected = 0
popup/item_0/text = "ISO 8859-1"
popup/item_0/id = 3
popup/item_1/text = "Shift JIS"
popup/item_1/id = 20
popup/item_2/text = "UTF-16"
popup/item_2/id = 25
popup/item_3/text = "UTF-8"
popup/item_3/id = 26
popup/item_4/text = "ASCII"
popup/item_4/id = 27

[node name="VersionLabel" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
text = "Version"

[node name="AutoVersion" type="CheckBox" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
button_pressed = true

[node name="Version" type="SpinBox" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 40.0
alignment = 1
editable = false

[node name="MaskPatternLabel" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
tooltip_text = "-1 is automatically using the best pattern."
mouse_filter = 1
text = "Mask Pattern"

[node name="AutoMaskPattern" type="CheckBox" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
button_pressed = true

[node name="MaskPattern" type="SpinBox" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 7.0
alignment = 1
editable = false

[node name="LightModulesLabel" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
text = "Light Modules"

[node name="Control3" type="Control" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2

[node name="LightModuleColor" type="ColorPickerButton" parent="MarginContainer2/VBoxContainer/options"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 1)

[node name="DarkModulesLabel" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
text = "Dark Modules"

[node name="Control5" type="Control" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2

[node name="DarkModuleColor" type="ColorPickerButton" parent="MarginContainer2/VBoxContainer/options"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="ModulePxSizeLabel" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
text = "Module Px Size"

[node name="AutoModulePxSize" type="CheckBox" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
button_pressed = true

[node name="ModulePxSize" type="SpinBox" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
alignment = 1
editable = false

[node name="QuietZoneSizeLabel" type="Label" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
text = "Quiet Zone Size"

[node name="Control6" type="Control" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2

[node name="QuietZoneSize" type="SpinBox" parent="MarginContainer2/VBoxContainer/options"]
layout_mode = 2
size_flags_horizontal = 3
value = 4.0
allow_greater = true
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="QRCodeRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5
script = ExtResource("1_t1m1p")
mode = 1
error_correction = 1
use_eci = false
data = ""
auto_version = true
auto_mask_pattern = true
light_module_color = Color(1, 1, 1, 1)
dark_module_color = Color(0, 0, 0, 1)
auto_module_px_size = true
quiet_zone_size = 4

[connection signal="text_changed" from="MarginContainer2/VBoxContainer/InputDataText" to="." method="_on_input_data_text_text_changed"]
[connection signal="item_selected" from="MarginContainer2/VBoxContainer/options/Encoding" to="." method="_on_encoding_item_selected"]
[connection signal="item_selected" from="MarginContainer2/VBoxContainer/options/ErrorCorrection" to="." method="_on_error_correction_item_selected"]
[connection signal="toggled" from="MarginContainer2/VBoxContainer/options/UseECI" to="." method="_on_use_eci_toggled"]
[connection signal="item_selected" from="MarginContainer2/VBoxContainer/options/ECIValue" to="." method="_on_eci_value_item_selected"]
[connection signal="toggled" from="MarginContainer2/VBoxContainer/options/AutoVersion" to="." method="_on_auto_version_toggled"]
[connection signal="value_changed" from="MarginContainer2/VBoxContainer/options/Version" to="." method="_on_version_value_changed"]
[connection signal="toggled" from="MarginContainer2/VBoxContainer/options/AutoMaskPattern" to="." method="_on_auto_mask_pattern_toggled"]
[connection signal="value_changed" from="MarginContainer2/VBoxContainer/options/MaskPattern" to="." method="_on_mask_pattern_value_changed"]
[connection signal="color_changed" from="MarginContainer2/VBoxContainer/options/LightModuleColor" to="." method="_on_light_module_color_color_changed"]
[connection signal="color_changed" from="MarginContainer2/VBoxContainer/options/DarkModuleColor" to="." method="_on_dark_module_color_color_changed"]
[connection signal="toggled" from="MarginContainer2/VBoxContainer/options/AutoModulePxSize" to="." method="_on_auto_module_px_size_toggled"]
[connection signal="value_changed" from="MarginContainer2/VBoxContainer/options/ModulePxSize" to="." method="_on_module_px_size_value_changed"]
[connection signal="value_changed" from="MarginContainer2/VBoxContainer/options/QuietZoneSize" to="." method="_on_quiet_zone_size_value_changed"]
